Change history
--------------

Release Candidate 3
===================

- Applied Tim Haines' patch changing FormHelper to make calls to FormatIfNecessary 

- Applied chris ortman's patch fixing MR-271
  "AdditionalSources not loaded when using the viewEngines element"

- Applied Ricardo Stuven's patch fixing MR-258
  "JSON serialization in Ajax calls"

- Applied goodwill's patch fixing MR-212
  "Script Helpers (e.g. $Scriptaculous) installscript function clear flash unexpected"

- Applied Georges Benatti's patch 
  adding the attribute matchHostNameAndPath to the routing node on the configuration. 
  
  If set to 'true', the regular expression is matched against the whole url. Defaults to 'false'

- Added ability to customise Next/Prev links in DiggStylePagination.
   Patch from Markus Zywitza.

- Applied Mathias Doenitz's patch fixing MR-265
  "(Re)enable initialization of Controller.AreaName, Controller.Name and Controller.Action before invoking Controller.Initialize()."

- Applied Adam Tybor's patch fixing MR-266
  "Fix for GetErrorSummary() throwing an KeyNotFoundException for SmartDispatch Controller and Binder"

- Fixed MR-260
  "PropertyBag in WizardStep is null when access via key"

- Applied Kyle Marshall's patch fixing MR-261
  "The default ValidatorRegistry is not overriddable in the monorail configuration"

- Add support to BaseControllerTest (well MockRequest actually) for Mocking Url Referer. Patch from Colin Ramsay. 

- Fix SupportsSection implementation in ViewComponent (was comparing section name equality against StringComparer.InvariantCultureIgnoreCase). 
  Also add a SupportsSection implementation to DiggStylePagination. Patches from Tim Haines. 

- Small change to DiggStylePagination to allow supplying querystring parameters in the url. Suggested by kalle.stenflo@gmail.com.

- Applied Tim Haines' patch adding BindObject overloads that accept the AutoLoadBehavior enum, 
  to the ARSmartDispatcherController 
